<resources>
    <string name="what_s_on_your_mind">Dígame</string>
    <string name="app_name">Primeros Auxilios</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="menu_header">Menú</string>
    <string name="credits">Créditos</string>
    <string name="info">Más información</string>
    <string name="services">Más servicios</string>
    <string name="input_text">Cuál es la emergencia?</string>
    <string name="send_button">Enviar</string>
    <string name="servicio_1">Número general</string>
    <string name="numero_1">911</string>
    <string name="servicio_2">Policía</string>
    <string name="numero_2">060</string>
    <string name="servicio_3">Bomberos</string>
    <string name="numero_3">068</string>
    <string name="servicio_4">Cruz Roja</string>
    <string name="numero_4">065</string>
    <string name="credits_title">Desarrolladores</string>
    <string name="delgadillo">David Delgadillo</string>
    <string name="mat_delgadillo">(A01195995)</string>
    <string name="peyrot">Marco A. Peyrot</string>
    <string name="mat_peyrot">(A00815262)</string>
    <string name="rojo">Luis Alfonso Rojo</string>
    <string name="mat_rojo">(A01113049)</string>
    <string name="marquis">Juliette Marquis</string>
    <string name="mat_marquis">(A01675192)</string>
    <string name="adicional">Créditos Adicionales</string>
    <string name="gracias">Esta aplicación está basada en la aplicación
    desarrollada por VidyasagarMSC en GitHub.</string>
    <string name="advertencia">Advertencia</string>
    <string name="disclaimer">No nos hacemos responsables por daños personales
    o hacia un tercero por el uso de esta aplicación. Les recordamos que se trata de una
    herramienta desarrollada como propuesta para una futura aplicación más profesional.</string>
    <string name="contacto">Contacto</string>
    <string name="correo">macpeyrot@hotmail.com</string>
    <string name="peyrot_contacto">Si requiere de mayor información, por favor contacte a Marco A. Peyrot.</string>
</resources>
