<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vmac.WatBot.ServicesActivity"
    android:id="@+id/drawerLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/servicio_1"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:textAlignment="center"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/first_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero_1"
                android:textSize="40dp"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_alignParentLeft="true"
                />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="61dp"
                android:layout_height="51dp"
                android:layout_marginLeft="5dp"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/first_number"
                android:src="@mipmap/ic_call_black_48dp"
                android:id="@+id/call_first"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/servicio_2"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:textAlignment="center"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/second_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero_2"
                android:textSize="40dp"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_alignParentLeft="true"
                />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="61dp"
                android:layout_height="51dp"
                android:layout_marginLeft="5dp"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/second_number"
                android:src="@mipmap/ic_call_black_48dp"
                android:id="@+id/call_second"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/servicio_3"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:textAlignment="center"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/third_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero_3"
                android:textSize="40dp"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_alignParentLeft="true"
                />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="61dp"
                android:layout_height="51dp"
                android:layout_marginLeft="5dp"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/third_number"
                android:src="@mipmap/ic_call_black_48dp"
                android:id="@+id/call_third"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/servicio_4"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:textAlignment="center"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fourth_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero_4"
                android:textSize="40dp"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_alignParentLeft="true"
                />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="61dp"
                android:layout_height="51dp"
                android:layout_marginLeft="5dp"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/fourth_number"
                android:src="@mipmap/ic_call_black_48dp"
                android:id="@+id/call_fourth"/>
        </RelativeLayout>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>